k8s/one/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-test-one
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cicd-test-one
  template:
    metadata:
      labels:
        app: cicd-test-one
    spec:
      containers:
        - name: cicd-test-one
          image: deividasrg/cicd-test:manual-test
          ports:
            - containerPort: 3000
