k8s/one/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cicd-test-one
  namespace: dev
spec:
  selector:
    app: cicd-test-one
  ports:
    - port: 80
      targetPort: 3000
