k8s/one/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-test-one
  namespace: dev
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - cicd-test-one.dragauskas.lt
      secretName: wildcard-dragauskas-tls
  rules:
    - host: cicd-test-one.dragauskas.lt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-test-one
                port:
                  number: 80
